--- a/src/app/views/item/item.component.html
+++ b/src/app/views/item/item.component.html
@@ -19,6 +19,7 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
+                                    <th>Name</th>
                                     <th>Title</th>
                                     <th>Sub title</th>
                                     <th>Date</th>
@@ -29,6 +30,7 @@
                             <tbody>
                                 <ng-container *ngIf="itemList?.length>0">
                                     <tr *ngFor="let item of itemList">
+                                        <td>{{item?.name}}</td>
                                         <td>{{item?.title}}</td>
                                         <td>{{item?.subTitle}}</td>
                                         <td>{{item?.createDate | date:'medium'}}</td>
