--- a/src/app/views/subscription/subscription.component.html
+++ b/src/app/views/subscription/subscription.component.html
@@ -29,8 +29,8 @@
                             <tbody>
                                 <ng-container *ngIf="subscriptionList?.length>0">
                                     <tr *ngFor="let subscription of subscriptionList">
-                                        <td>{{subscription?.typename}}</td>
-                                        <td>{{subscription?.typeDescription}}</td>
+                                        <td>{{subscription?.name}}</td>
+                                        <td>{{subscription?.description}}</td>
                                         <td>
                                             {{subscription?.createDate | date:'medium'}}
                                         </td>
@@ -213,7 +213,7 @@
                     <input
                         type="text"
                         name="pname"
-                        [(ngModel)]="subscriptionFormDetails.typename"
+                        [(ngModel)]="subscriptionFormDetails.name"
                         class="form-control"
                     >
                 </div>
@@ -252,7 +252,7 @@
                     <textarea
                         class="form-control"
                         name="subTitle"
-                        [(ngModel)]="subscriptionFormDetails.typeDescription"
+                        [(ngModel)]="subscriptionFormDetails.description"
                     ></textarea>
 
                 </div>
